Adding and removing projects

--- a/src/frontend/css/theme.less
+++ b/src/frontend/css/theme.less
@@ -5,23 +5,15 @@ html, body {
   width: 100%;
   height: 100%;
   margin: 0;
+  overflow: hidden;
 }
 
-
-/*.left-panel-button {
-  float: right;
+.main-menu {
+  .md-button {
+    clear:both;
+    display: block;
+  }
 }
-
-.project-button {
-  width: 100%;
-  height: 50px;
-
-
-}
-
-.tt-icon {
-  opacity: 0.5;
-}*/
 
 .add-project-button {
   position: fixed;
